AF-648: Create command line migration tool for workspace projects.
* Still need to solve packaging (weld-se does not work well in an uber-jar).
* Need to fix log configuration to avoid spamming console output.

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <module>kie-wb-common-stunner</module>
     <module>kie-wb-common-dmn</module>
     <module>kie-wb-common-ala</module>
+    <module>kie-wb-common-cli</module>
   </modules>
 
   <properties>
