--- a/kie-wb-common-cli/kie-wb-common-project-migration/pom.xml
+++ b/kie-wb-common-cli/kie-wb-common-project-migration/pom.xml
@@ -113,6 +113,23 @@
           </arguments>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <descriptors>
+            <descriptor>src/assembly/descriptor.xml</descriptor>
+          </descriptors>
+        </configuration>
+        <executions>
+          <execution>
+            <id>tool-zip</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
