Silence console log messages in project migration tool.

--- a/kie-wb-common-cli/kie-wb-common-project-migration/pom.xml
+++ b/kie-wb-common-cli/kie-wb-common-project-migration/pom.xml
@@ -93,6 +93,15 @@
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-core</artifactId>
     </dependency>
+    <!-- XXX maybe enable logging to a file for troubleshooting? -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-nop</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>log4j-over-slf4j</artifactId>
+    </dependency>
   </dependencies>
   
   <build>
