--- a/kie-wb-common-cli/kie-wb-common-project-migration/pom.xml
+++ b/kie-wb-common-cli/kie-wb-common-project-migration/pom.xml
@@ -90,6 +90,10 @@
       <artifactId>commons-cli</artifactId>
     </dependency>
     <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-core</artifactId>
     </dependency>
