--- a/kie-wb-common-cli/kie-wb-common-project-migration/pom.xml
+++ b/kie-wb-common-cli/kie-wb-common-project-migration/pom.xml
@@ -98,10 +98,10 @@
       <groupId>org.slf4j</groupId>
       <artifactId>log4j-over-slf4j</artifactId>
     </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-nop</artifactId>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.slf4j</groupId>-->
+      <!--<artifactId>slf4j-nop</artifactId>-->
+    <!--</dependency>-->
   </dependencies>
   
   <build>
