--- a/kie-wb-common-screens/kie-wb-common-data-modeller/kie-wb-common-data-modeller-client/pom.xml
+++ b/kie-wb-common-screens/kie-wb-common-data-modeller/kie-wb-common-data-modeller-client/pom.xml
@@ -42,6 +42,10 @@
       <groupId>org.uberfire</groupId>
       <artifactId>uberfire-structure-client</artifactId>
     </dependency>
+      <dependency>
+          <groupId>org.uberfire</groupId>
+          <artifactId>uberfire-structure-api</artifactId>
+      </dependency>
     <dependency>
       <groupId>org.uberfire</groupId>
       <artifactId>uberfire-message-console-client</artifactId>
